# BusinessOgre

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  readthedocs.yml
docs/: Installation.md  Quick Start.md  conf.py  index.rst  requirements.txt
docs/Best Practices/: AI Coding.md  Neat Business Layer.md
docs/Prompt Strategies/: Usable Business File Prompts.md  Workflow Build Prompts.md  index.md
src/business_ogre/: __init__.py
src/business_ogre/diagrams/: mermaid.py
src/businessogre/: __init__.py
src/businessogre/workflows/: workflow.py
tests/: __init__.py  test_mermaid.py  test_workflow.py
