[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "businessogre"
version = "0.0.3"
description = "Placeholder package scaffold for BusinessOgre"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Peter Jachim", email = "pjachim@outlook.com" }
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/pjachim/BusinessOgre"
Repository = "https://github.com/pjachim/BusinessOgre"
Documentation = "https://businessogre.readthedocs.io"

[tool.hatch.build.targets.wheel]
packages = ["src/businessogre"]
